src/app/globals.css
@import "tailwindcss";

:root {
  --white: #FEFEFE;
  --black: #171717;
  --background: var(--white);
  --foreground: var(--black);
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

@media (prefers-color-scheme: dark) {
  :root {
    --background: var(--black);
    --foreground: var(--white);
  }
}

*, *::before, *::after {
  box-sizing: border-box;
}

body {
  @apply min-h-screen flex flex-col justify-between bg-white dark:bg-black;
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
  cursor: none;
}

h1, h2, h3, h4, h5, h6 {
  font-family: var(--font-sans);
  font-weight: bold;
  color: var(--foreground);
  margin-top: 2rem;
  margin-bottom: 1rem;
}

h1 {
  font-size: 2rem;
}

h2 {
  font-size: 1.5rem;
}

h3 {
  font-size: 1.25rem;
}

h4 {
  font-size: 1rem;
}

h5 {
  font-size: 0.875rem;
}

h6 {
  font-size: 0.75rem;
}

p {
  font-size: 1rem;
  line-height: 1.5;
}

a {
  @apply text-blue-300 hover:underline cursor-pointer;
}

button {
  @apply cursor-pointer;
}

.content-holder {
  @apply grow flex flex-col items-center justify-center px-4 py-12 pt-26;
}

